# cryptgpt

./: .gitignore  .gitmodules  LICENSE  README.md  convert_to_files.py  prepare_dataset.py  pyproject.toml  train_tokenizer.py  train_tokenizer_files.py
cryptgpt/: convert_to_files.py  prepare_dataset.py  tokenizer_utils.py  train_tokenizer_files.py
training/: axolotl-large.yaml  axolotl.yaml
